Fixed night mode on IOS

--- a/src/scss/features/_night-mode.scss
+++ b/src/scss/features/_night-mode.scss
@@ -17,7 +17,8 @@ img, .has-background-dim, .wp-block-embed {
   transition: filter .4s;
 }
 /* For IOS & macOS */
-@media screen and prefers-dark-interface {
+//noinspection CssInvalidMediaFeature
+@media screen and (prefers-dark-interface) {
   body.night_mode {
     filter: invert(1);
     background-color: $color-brand-dark;
